--- a/assets/css/bisect.css
+++ b/assets/css/bisect.css
@@ -19,13 +19,12 @@ body {
   margin: 60px 0;
   text-align: center;
 }
-.jumbotron h1 {
-  font-size: 72px;
-  line-height: 1;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+
+.bisect-lead {
+    margin-bottom: 20px;
+    font-size: 21px;
+    font-weight: 200;
+    line-height: 35px;
 }
 
 .footer {
