Add commented regex :before

--- a/assets/css/bisect.css
+++ b/assets/css/bisect.css
@@ -96,6 +96,11 @@ body {
   text-align:center;
   background-color:#aaa;
 }
+/*
+code:before{
+  content:'[:regex:]'
+}
+*/
 
 /* Raph icons */
 @font-face {
